--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container-fluid mt-5" id="main-container">
       <header>
         <span class="dark-mode position-absolute top-0 end-0 mt-3 me-3" id="dark-mode-switch"><i class="bi bi-moon"></i>&nbsp;Dark Mode</span>
-          <h1 class="text-center display-1 mb-5 mt-4">TODO app</h1>
+          <h1 class="text-center display-1 mb-5 mt-4 pt-5">TODO app</h1>
       </header>
       <div class="container-sm">
         <form class="todo-form">
