--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>TODO app</title>
+    <title>TO-DO app</title>
   </head>
   <body>
     <div class="container-fluid mt-5" id="main-container">
       <header>
         <span class="dark-mode position-absolute top-0 end-0 mt-3 me-3" id="dark-mode-switch"><i class="bi bi-moon"></i>&nbsp;Dark Mode</span>
-          <h1 class="text-center display-1 mb-5 mt-4 pt-5">TODO app</h1>
+          <h1 class="text-center display-3 mb-5 mt-4 pt-5">TO-DO app</h1>
       </header>
       <div class="container-sm">
         <form class="todo-form">
           <div class="mb-3 d-grid gap-2 d-md-flex justify-content-md-end">
             <input
               type="text"
+              maxlength="100"
               class="todo-input form-control"
-              id="exampleInputEmail1"
-              placeholder="Add a new TODO"
+              id="newToDoItem"
+              placeholder="Add a new TO-DO item..."
             />
             <button type="submit" class="add-button btn btn-primary">
               Submit
@@ -47,12 +48,15 @@
         </form>
         <ul class="todo-items list-group">
           <!-- dummy item -->
-          <!-- <li class="item list-group-item" data-key="1594003133171">
-                  <input class="checkbox" type="checkbox">
-                  Go to Gym
+          <!-- <li class="item list-group-item position-relative" data-key="1594003133171">
+                  <input class="checkbox" type="checkbox" >
+                  sdsadsada
                   <button type="button" class="btn-close delete-button" aria-label="Close"></button>
                 </li> -->
         </ul>
+        <div class="alert alert-success invisible" role="alert" id="success">
+            CONGRATS! You've crossed all of the items from your list!
+          </div>
       </div>      
     </div>
     <footer class="container">
