--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css" />
@@ -55,10 +56,19 @@
                 </li> -->
         </ul>
         <div class="alert alert-success invisible" role="alert" id="success">
-            CONGRATS! You've crossed all of the items from your list!
+            CONGRATS! You've cleared your list!
           </div>
       </div>      
     </div>
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-body">
+          Hi! If you like this app, make sure to check out my other apps.
+          <div class="mt-2 pt-2 border-top">
+            <button type="button" class="btn btn-primary btn-sm toast-btn"><a class="tost-link" href="https://github.com/ademkoca/" target="_blank">Check out!</a></button>
+            <button type="button" class="btn btn-secondary btn-sm toast-btn" data-bs-dismiss="toast">Close</button>
+          </div>
+        </div>
+      </div>
     <footer class="container">
         Developed by: <strong>Adem Koca</strong><span><a href="https://github.com/ademkoca" target="_blank"><i class="fab fa-github" target="_blank"></i></a><span><a href="https://www.linkedin.com/in/ademkoca/" target="_blank"><i class="fab fa-linkedin"></i></a><span><a href="https://www.instagram.com/ademkoca/" target="_blank"><i class="fab fa-instagram"></i></a><span><a href="https://twitter.com/rahatlook" target="_blank"><i class="fab fa-twitter"></i></a></span>
       </footer>
@@ -68,5 +78,13 @@
       integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u"
       crossorigin="anonymous"
     ></script>
+    <script>
+window.onload = (event) => {
+let myAlert = document.querySelector('.toast');
+let bsAlert = new bootstrap.Toast(myAlert);
+bsAlert.show();
+
+}
+    </script>
   </body>
 </html>
