--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
     <title>TO-DO app</title>
   </head>
   <body>
-    <div class="container-fluid mt-5" id="main-container">
-      <header>
-        <span class="dark-mode position-absolute top-0 end-0 mt-3 me-3" id="dark-mode-switch"><i class="bi bi-moon"></i>&nbsp;Dark Mode</span>
+    <div class="container-fluid mt-5 vh-100" id="main-container">
+      <header class="container">
+        <!-- <span class="dark-mode position-absolute top-0 end-0 mt-3 me-3" id="dark-mode-switch"><i class="bi bi-moon"></i>&nbsp;Dark Mode</span> -->
+        <div class="form-check form-switch float-end">
+            <span><label class="form-check-label" for="flexSwitchCheckDefault">Dark mode</label></span>
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            
+          </div>
           <h1 class="text-center display-3 mb-5 mt-4 pt-5">TO-DO app</h1>
       </header>
       <div class="container-sm">
@@ -58,9 +63,9 @@
         <div class="alert alert-success invisible" role="alert" id="success">
             CONGRATS! You've cleared your list!
           </div>
-      </div>      
-    </div>
-    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      </div>  
+      <!--Live toast-->
+    <div class="toast position-absolute bottom-0 end-0" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-body">
           Hi! If you like this app, make sure to check out my other apps.
           <div class="mt-2 pt-2 border-top">
@@ -69,6 +74,9 @@
           </div>
         </div>
       </div>
+      <!--/Live toast-->    
+    </div>
+    
     <footer class="container">
         Developed by: <strong>Adem Koca</strong><span><a href="https://github.com/ademkoca" target="_blank"><i class="fab fa-github" target="_blank"></i></a><span><a href="https://www.linkedin.com/in/ademkoca/" target="_blank"><i class="fab fa-linkedin"></i></a><span><a href="https://www.instagram.com/ademkoca/" target="_blank"><i class="fab fa-instagram"></i></a><span><a href="https://twitter.com/rahatlook" target="_blank"><i class="fab fa-twitter"></i></a></span>
       </footer>
