--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
           </div>
         </form>
-        <ul class="todo-items list-group">
+        <ul class="todo-items list-group" id="todo-list">
           <!-- dummy item -->
           <!-- <li class="item list-group-item position-relative" data-key="1594003133171">
                   <input class="checkbox" type="checkbox" >
